package javaLang.observer.Test2;

public abstract class Observer {
    protected Subject subject;

   public abstract void update();
}
